<resources>
    <string name="app_name">XPlayer</string>
    <string name="web_video">网络</string>
    <string name="local_video">本地</string>
    <string name="short_video">短视频</string>
    <string name="file">文件</string>
    <string name="loading">视频正在加载中...</string>
    <string name="canot_play">无法播放</string>
    <string name="last_video">已经是最后一个视频了</string>
    <string name="first_video">已经是第一个视频了</string>
    <string name="lock_screen">屏幕已锁定</string>
    <string name="unlock_screen">屏幕已解除锁定</string>
    <string name="confirm">确定</string>
    <string name="take_video">拍摄视频</string>
    <string name="play">播放</string>
    <string name="delete">删除</string>
    <string name="rename">重命名</string>
    <string name="details">详细信息</string>
    <string name="operation">操作</string>
    <string name="path">路径</string>
    <string name="size">大小</string>
    <string name="duration">时长</string>
    <string name="resolution">分辨率</string>
    <string name="no_video">暂无视频</string>
    <string name="push_video">上传</string>
    <string name="video_setting">播放器设置</string>
    <string name="video_play_speed">播放速度: 1.0倍</string>
    <string name="_default">默认</string>
    <string name="circulate_play">循环播放当前视频</string>
    <string name="video_quality">画质:</string>
    <string name="flex">流畅</string>
    <string name="normal">普通</string>
    <string name="high">高清</string>

</resources>
